more work on the segment mapping ui

--- a/docs/work_in_progress/segment_mapping_ui/mapping.css
+++ b/docs/work_in_progress/segment_mapping_ui/mapping.css
@@ -188,6 +188,10 @@ td.address {
   width: 300px;
 }
 
+#mapping td.foot {
+  text-align: center;
+}
+
 #mapping input {
   width: 130px;
   margin: 0;
