more work on the segment mapping ui (creation of docker image, integration with malcolm's nginx reverse proxy)

--- a/name-map-ui/site/mapping.css
+++ b/name-map-ui/site/mapping.css
@@ -1,3 +1,5 @@
+/* Copyright (c) 2020 Battelle Energy Alliance, LLC.  All rights reserved. */
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
