minor tweaks for documentation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,42 +24,42 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p class="view"><i class="fa fa-fighter-jet" aria-hidden="true"></i> <a href="{{ site.quickstart_docs_uri | default: /docs/ | relative_url }}">Quick Start</a></p>
+        <p class="view"><i class="fa fa-fighter-jet" aria-hidden="true"></i> <a href="{{ site.quickstart_docs_uri | default: docs | relative_url }}">Quick Start</a></p>
 
-        <p class="view"><i class="fa fa-book" aria-hidden="true"></i> <a href="{{ site.docs_uri | default: /docs/ | relative_url }}">Documentation</a></p>
+        <p class="view"><i class="fa fa-book" aria-hidden="true"></i> <a href="{{ site.docs_uri | default: docs | relative_url }}">Documentation</a></p>
 
-        <p class="view"><i class="fa fa-puzzle-piece" aria-hidden="true"></i> <a href="{{ site.components_docs_uri | default: /docs/ | relative_url }}">Components</a></p>
+        <p class="view"><i class="fa fa-puzzle-piece" aria-hidden="true"></i> <a href="{{ site.components_docs_uri | default: docs | relative_url }}">Components</a></p>
 
-        <p class="view"><i class="fa fa-map-signs" aria-hidden="true"></i> <a href="{{ site.protocols_docs_uri | default: /docs/ | relative_url }}">Supported Protocols</a></p>
+        <p class="view"><i class="fa fa-map-signs" aria-hidden="true"></i> <a href="{{ site.protocols_docs_uri | default: docs | relative_url }}">Supported Protocols</a></p>
 
-        <p class="view"><i class="fa fa-sliders" aria-hidden="true"></i> <a href="{{ site.configuring_docs_uri | default: /docs/ | relative_url }}">Configuring</a></p>
+        <p class="view"><i class="fa fa-sliders" aria-hidden="true"></i> <a href="{{ site.configuring_docs_uri | default: docs | relative_url }}">Configuring</a></p>
 
-        <p class="view"><i class="fa fa-table" aria-hidden="true"></i> <a href="{{ site.arkime_docs_uri | default: /docs/ | relative_url }}">Arkime</a></p>
+        <p class="view"><i class="fa fa-table" aria-hidden="true"></i> <a href="{{ site.arkime_docs_uri | default: docs | relative_url }}">Arkime</a></p>
 
-        <p class="view"><i class="fa fa-tachometer" aria-hidden="true"></i> <a href="{{ site.dashboards_docs_uri | default: /docs/ | relative_url }}">Dashboards</a></p>
+        <p class="view"><i class="fa fa-tachometer" aria-hidden="true"></i> <a href="{{ site.dashboards_docs_uri | default: docs | relative_url }}">Dashboards</a></p>
 
-        <p class="view"><i class="fa fa-plug" aria-hidden="true"></i> <a href="{{ site.api_docs_uri | default: /docs/ | relative_url }}">API</a></p>
+        <p class="view"><i class="fa fa-plug" aria-hidden="true"></i> <a href="{{ site.api_docs_uri | default: docs | relative_url }}">API</a></p>
 
-        <p class="view"><i class="fa fa-shield" aria-hidden="true"></i> <a href="{{ site.hardening_docs_uri | default: /docs/ | relative_url }}">Hardening</a></p>
+        <p class="view"><i class="fa fa-shield" aria-hidden="true"></i> <a href="{{ site.hardening_docs_uri | default: docs | relative_url }}">Hardening</a></p>
 
-        <p class="view"><i class="fa fa-server" aria-hidden="true"></i> <a href="{{ site.hedgehog_docs_uri | default: /docs/ | relative_url }}">Hedgehog Linux</a></p>
+        <p class="view"><i class="fa fa-server" aria-hidden="true"></i> <a href="{{ site.hedgehog_docs_uri | default: docs | relative_url }}">Hedgehog Linux</a></p>
 
-        <p class="view"><i class="fa fa-handshake-o" aria-hidden="true"></i> <a href="{{ site.contributing_docs_uri | default: /docs/ | relative_url }}">Contribution Guide</a></p>
+        <p class="view"><i class="fa fa-handshake-o" aria-hidden="true"></i> <a href="{{ site.contributing_docs_uri | default: docs | relative_url }}">Contribution Guide</a></p>
 
         <!--
-        <p class="view"><i class="fa fa-upload" aria-hidden="true"></i> <a href="{{ site.upload_docs_uri | default: /docs/ | relative_url }}">PCAP Upload</a></p>
+        <p class="view"><i class="fa fa-upload" aria-hidden="true"></i> <a href="{{ site.upload_docs_uri | default: docs | relative_url }}">PCAP Upload</a></p>
 
-        <p class="view"><i class="fa fa-eye" aria-hidden="true"></i> <a href="{{ site.live_analysis_docs_uri | default: /docs/ | relative_url }}">Live Traffic Analysis</a></p>
+        <p class="view"><i class="fa fa-eye" aria-hidden="true"></i> <a href="{{ site.live_analysis_docs_uri | default: docs | relative_url }}">Live Traffic Analysis</a></p>
 
-        <p class="view"><i class="fa fa fa-share-alt" aria-hidden="true"></i> <a href="{{ site.thirdparty_logs_docs_uri | default: /docs/ | relative_url }}">Third Party Logs</a></p>
+        <p class="view"><i class="fa fa fa-share-alt" aria-hidden="true"></i> <a href="{{ site.thirdparty_logs_docs_uri | default: docs | relative_url }}">Third Party Logs</a></p>
 
-        <p class="view"><i class="fa fa-search" aria-hidden="true"></i> <a href="{{ site.queries_docs_uri | default: /docs/ | relative_url }}">Queries</a></p>
+        <p class="view"><i class="fa fa-search" aria-hidden="true"></i> <a href="{{ site.queries_docs_uri | default: docs | relative_url }}">Queries</a></p>
 
-        <p class="view"><i class="fa fa-bell" aria-hidden="true"></i> <a href="{{ site.alerting_docs_uri | default: /docs/ | relative_url }}">Alerting</a></p>
+        <p class="view"><i class="fa fa-bell" aria-hidden="true"></i> <a href="{{ site.alerting_docs_uri | default: docs | relative_url }}">Alerting</a></p>
 
-        <p class="view"><i class="fa fa-area-chart" aria-hidden="true"></i> <a href="{{ site.anomaly_detection_docs_uri | default: /docs/ | relative_url }}">Anomaly Detection</a></p>
+        <p class="view"><i class="fa fa-area-chart" aria-hidden="true"></i> <a href="{{ site.anomaly_detection_docs_uri | default: docs | relative_url }}">Anomaly Detection</a></p>
 
-        <p class="view"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> <a href="{{ site.severity_docs_uri | default: /docs/ | relative_url }}">Severity Scoring</a></p>
+        <p class="view"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> <a href="{{ site.severity_docs_uri | default: docs | relative_url }}">Severity Scoring</a></p>
         -->
 
       </header>
@@ -82,7 +82,7 @@
         <p class="view"><i class="fa fa-bug" aria-hidden="true"></i> <a href="{{ site.github.repository_url }}/issues">{{ site.title | default: site.github.repository_name }} Issue Tracker <i class="fa fa-sign-out" aria-hidden="true"></i></a></p>
         {% endif %}
 
-        <p class="view"><i class="fa fa-youtube-play" aria-hidden="true"></i> <a href="{{ site.youtube_url | default: https://youtube.com | absolute_url }}">{{ site.title | default: site.github.repository_name }} on YouTube <i class="fa fa-sign-out" aria-hidden="true"></i></a></p>
+        <p class="view"><i class="fa fa-youtube-play" aria-hidden="true"></i> <a href="{{ site.youtube_url | default: youtube.com | absolute_url }}">{{ site.title | default: site.github.repository_name }} on YouTube <i class="fa fa-sign-out" aria-hidden="true"></i></a></p>
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile <i class="fa fa-sign-out" aria-hidden="true"></i></a></p>
