Added optional link for mastodon to default GitHub pages layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,7 @@
         -->
 
         {% if site.mastodon.id %}
-        <p class="view"><a rel="me" href="{{ site.mastodon.url }}">@{{ site.mastodon.id }} <i class="fa fa-connectdevelop" aria-hidden="true"></i></a></p>
+        <p class="view"><i class="fa fa-share-alt" aria-hidden="true"></i> <a rel="me" href="{{ site.mastodon.url }}">@{{ site.mastodon.id }} <i class="fa fa-sign-out" aria-hidden="true"></i></a></p>
         {% endif %}
       </footer>
     </div>
